--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -147,7 +147,7 @@ http://strimas.com/r/tidy-sf/
 library(sf)
 nc <- st_read(system.file("shape/nc.shp", package="sf"))
 
-visualise(geom = gt_as_geom(nc), fillcol = NWBIR74)
+visualise(geom = gt_sf(nc), fillcol = NWBIR74)
 ```
 
 
