--- a/index.Rmd
+++ b/index.Rmd
@@ -52,12 +52,8 @@ Planned for future versions
 
 - `gt_curvify()` will add control points that round off corners so that the resulting geometry is a curve rather than a polygon/straight line,
 
-- `gs_voronoi()` creates a pattern of voronoi polygons with a random or given point pattern as anchor,
+- `gt_buffer()`, ...
 
-- `gt_skew()`, `gt_stretch()`, `gt_buffer()`, ... to modify geoms,
-
-- `gt_edit()`, which will allow to modify the position of individual vertices of any geom.
-
-- ...
+- set operations for `geom`s
 
 ___________________________________________
