--- a/vignettes/geometr.Rmd
+++ b/vignettes/geometr.Rmd
@@ -14,49 +14,55 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
-library(geometr)
-library(sf)
-library(sp)
-library(raster)
-```
-
 ## Interoperability
 
-As R is an open source environment, no single package or class will ever be the sole source of a particular data structure, and this is also the case for geometric or spatial classes.
+R is an open source environment and that has as one consequence that no single package or class will ever be the sole source of a particular data structure, which is also the case for geometric or spatial classes.
 Interoperable software is software that can easily exchange information with other software, leading to the same result with different interpretations of an operation.
-`Geometr` improves interoperability by providing getters and setters that retrieve particular information from a potentially wide range of classes that share those information, and which provide these information in an identical format across all classes.
+`Geometr` improves interoperability in R with respect to spatial classes, by providing functions that extract particular types of information, such as meta data or attributes from a potentially wide range of classes, and which provide these information in an identical format across all classes.
 
-Think, for example about the extent of any spatial object. The extent is characterised by a minimum and maximum value in all dimensions into which the object spans.
+Think, for example about the extent of a spatial object. The extent is characterised by a minimum and maximum value in all dimensions into which the object spans.
 There are, however, many different forms in which this extent can be reported, such as a vector of four numbers, a 2x2 table or any other conceivable form.
-But which value is reported in which position, does the reported object have names and if so, what do they mean and how do they relate to the names of objects reported by other software?
-Consider the following examples, which are all kind of considered standard in R to date.
+When it comes to the structure of the reported information, several questions arise:
+
+* Which value is reported in which position?
+* Does the reported object have names and if so, what do they mean?
+* How do names relate to the names of objects reported by other software?
+
+Consider the following examples, which are all considered standard in R to date:
 
 ```{r}
+library(sf)
 nc <- st_read(system.file("shape/nc.shp", package="sf"))
 st_bbox(nc)
 
+library(sp)
 nc_sp <- as_Spatial(nc)
 bbox(nc_sp)
 
+library(raster)
 ras <- raster(system.file("external/test.grd", package="raster"))
 extent(ras)
 ```
 
-For a human user the arrangement of those information might only matter when it lacks information that clearly identify any of the information that shall be shared (with the human).
-This capacity of humans, to recognise information in their context, is not given by most software to date, or more specifically, it needs to be programmed into the software that is supposed to gather those information.
-A function that is meant to build on spatial information that are provided by a user should ideally be accessible to the different flavours that are common in an open source software, so that everybody can use the classes they prefer, perhaps out of good reasons.
-So far, those functions don't yet exist and `geometr` provides them, as the following example shows
+For a human user the structure of those information might only matter when it lacks crucial information.
+This capacity of humans, to recognise information in their context, is not given out of the box by most software to date, or more specifically, it needs to be programmed into the software that is supposed to gather those information.
+Think of a function that is supposed to take some spatial input from the user, without knowing in advance what spatial class that will be, and hence does not know how the output of the respective class should be interpreted.
+The need for such a function is derived from the different flavours/functions/pipelines that are common in an open source software, so that everybody can use the classes they prefer, perhaps out of good reasons.
+So far, this interoperability is not given in R and `geometr` provides it, as the following example shows
 
 ```{r}
-getExtent(x = nc)
+library(geometr)
+myInput <- nc
+getExtent(x = myInput)
 
-getExtent(x = nc_sp)
+myInput <- nc_sp
+getExtent(x = myInput)
 
-getExtent(x = ras)
+myInput <- ras
+getExtent(x = myInput)
 ```
 
-This ensures that a custom function in a package that is meant to work with several spatial classes, and which must thus be agnostic to the spatial class provided, needs merely one very simple row of code and not a lengthy if-condition that tests classes and implements different extraction procedures.
+This ensures that a custom function that is meant to process several spatial classes, and which must thus be agnostic to the class specific peculiarities, requires merely one very simple row of code and not a lengthy if-condition that tests classes and implements different extraction procedures.
 Moreover, the output of the tools provided by `geometr` is tidy, i.e. it provides variables in columns and observations in rows.
 
 
