--- a/vignettes/geometr.Rmd
+++ b/vignettes/geometr.Rmd
@@ -16,17 +16,19 @@ knitr::opts_chunk$set(
 
 ## Interoperability
 
-R is an open source environment and that has as one consequence that no single package or class will ever be the sole source of a particular data structure, which is also the case for geometric or spatial classes.
-Interoperable software is software that can easily exchange information with other software, leading to the same result with different interpretations of an operation.
-`Geometr` improves interoperability in R with respect to spatial classes, by providing functions that extract particular types of information, such as meta data or attributes from a potentially wide range of classes, and which provide these information in an identical format across all classes.
+R is an open source environment which means that no single package or class will ever be the sole source of a particular data structure and this is also the case for datastructures that capture spatial or geometric data.
 
-Think, for example about the extent of a spatial object. The extent is characterised by a minimum and maximum value in all dimensions into which the object spans.
-There are, however, many different forms in which this extent can be reported, such as a vector of four numbers, a 2x2 table or any other conceivable form.
+Interoperable software is software that can easily exchange information with other software, which is typically achieved by providing the output of functionally similar operations in a common arrangement or format.
+`Geometr` improves interoperability in R for spatial classes, by providing functions that extract and provide metadata in an identical format from a potentially wide range of classes.
+
+Think, for example about the extent of a spatial object.
+The extent is characterised by a minimum and maximum value in all dimensions into which the object spans.
+There are, however, several forms in which this extent can be reported, such as a vector of four numbers or a 2x2 table.
 When it comes to the structure of the reported information, several questions arise:
 
 * Which value is reported in which position?
 * Does the reported object have names and if so, what do they mean?
-* How do names relate to the names of objects reported by other software?
+* How do names/positions relate to names/positions of objects reported by other software?
 
 Consider the following examples, which are all considered standard in R to date:
 
@@ -45,7 +47,7 @@ extent(ras)
 ```
 
 For a human user the structure of those information might only matter when it lacks crucial information.
-This capacity of humans, to recognise information in their context, is not given out of the box by most software to date, or more specifically, it needs to be programmed into the software that is supposed to gather those information.
+The capacity of humans to recognise information in their context is not given out of the box by most software to date, or more specifically, it needs to be programmed into the software that is supposed to gather those information.
 Think of a function that is supposed to take some spatial input from the user, without knowing in advance what spatial class that will be, and hence does not know how the output of the respective class should be interpreted.
 The need for such a function is derived from the different flavours/functions/pipelines that are common in an open source software, so that everybody can use the classes they prefer, perhaps out of good reasons.
 So far, this interoperability is not given in R and `geometr` provides it, as the following example shows
