--- a/vignettes/geometr.Rmd
+++ b/vignettes/geometr.Rmd
@@ -30,7 +30,7 @@ When it comes to the structure of the reported information, several questions ar
 * Does the reported object have names and if so, what do they mean?
 * How do names/positions relate to names/positions of objects reported by other software?
 
-Consider the following examples, which are all considered standard in R to date:
+Take the following examples, which are all considered standard in R to date:
 
 ```{r}
 library(sf)
@@ -46,10 +46,10 @@ ras <- raster(system.file("external/test.grd", package="raster"))
 extent(ras)
 ```
 
-For a human user the structure of those information might only matter when it lacks crucial information.
-The capacity of humans to recognise information in their context is not given out of the box by most software to date, or more specifically, it needs to be programmed into the software that is supposed to gather those information.
-Think of a function that is supposed to take some spatial input from the user, without knowing in advance what spatial class that will be, and hence does not know how the output of the respective class should be interpreted.
-The need for such a function is derived from the different flavours/functions/pipelines that are common in an open source software, so that everybody can use the classes they prefer, perhaps out of good reasons.
+For a human user the structure of those information might not matter.
+The capacity of humans to recognise information relative to their context needs to be programmed into the software that is supposed to gather those information.
+Think of a third function that is supposed to take some spatial input from the user and derive information from it, without knowing in advance what spatial class that will be, and hence does not know how the output of the respective class should be interpreted.
+The need for such a function is derived from the different flavours/functions/pipelines that are common in an open source software, so that all classes, which may be preferable in particular usecases, can be used equally.
 So far, this interoperability is not given in R and `geometr` provides it, as the following example shows
 
 ```{r}
